# libglvideo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
cmake/: libglvideoConfig.cmake
cmake/Modules/: Findlibglvideo.cmake
examples/: CMakeLists.txt  play.cpp  stress.cpp
examples/lib/pez/: CMakeLists.txt  LICENSE
examples/lib/pez/demo/: HeadlessGiant.ctm  PezIntro1.Clear.c  PezIntro2.Triangle.c  PezIntro3.Texture.c  PezIntro4.Mesh.cpp  Simple.glsl
examples/lib/pez/lib/glew/: glew.c  glew.h  glxew.h
examples/lib/pez/lib/glsw/: glsw.c
examples/lib/pez/lib/libpez/: LICENSE  pez.cocoa.m  pez.h  pez.linux.c  pez.windows.c
examples/lib/pez/lib/openctm/: openctm.c
examples/lib/pez/lib/pnglite/: pnglite.c
examples/videos/: generate.sh  hap-1920x1080-24fps.mov  hap-3840x2160-24fps.mov  hap-3840x2160-60fps.mov  mjpeg-1920x1080-24fps.mov
include/: Context.h  Decoder.h  Frame.h  FrameTexture.h  GLContext.h  Movie.h  TrackDescription.h  concurrency.h  concurrent_queue.h  debug.h  gl_includes.h  gl_load.h  glvideo.h  platform.h  snappy-win.h
include/decoders/: hap.h  jpeg.h
include/glad/: glad.h
lib/pez/: LICENSE  README
lib/pez/demo/: PezIntro1.Clear.c  PezIntro2.Triangle.c  PezIntro3.Texture.c  PezIntro4.Mesh.cpp  PixelLighting.glsl
lib/pez/lib/glew/: glew.c  glew.h  glxew.h
lib/pez/lib/libpez/: LICENSE  pez.cocoa.m  pez.h  pez.linux.c  pez.windows.c
lib/pez/lib/openctm/: openctm.c
lib/pez/lib/pnglite/: pnglite.c
src/: Context.cpp  Frame.cpp  FrameTexture.cpp  GLContext.cpp  Movie.cpp  TrackDescription.cpp  gl_includes.cpp  gl_load.cpp  glad.c  glvideo.cpp  main.cpp
src/decoders/: hap.cpp  jpeg.cpp
